# aoa

./: .gitignore  .golangci.yml  .trivyignore  Makefile  PLAN.md  README.md  TASKS.md  assets.go  devbox.json  flake.nix  go.mod  go.sum  main.go  pyproject.toml
.github/workflows/: ci.yml  formula.yml
Formula/: aoa.rb
cmd/: attach.go  build.go  health.go  list.go  root.go  shell.go
config/: default.toml  secretspec.toml
docs/: comparison.md  security.md
images/: Dockerfile  Dockerfile.agent  Dockerfile.base
internal/config/: config.go  config_test.go
internal/container/: network.go  network_test.go  runtime.go
internal/secrets/: inject.go  inject_test.go  keychain.go  secretspec.go
internal/security/: audit.go  paths.go  paths_test.go
internal/session/: manager.go  manager_test.go  tmux.go
scripts/: entrypoint.sh  test-security.sh
tests/: conftest.py  pytest_skip_list.txt
tests/cli/: test_help.py
tests/health/: test_health.py
tests/integration/: test_build.py  test_container_basics.py
tests/network/: test_network_policy.py
tests/secrets/: test_inject.py
tests/security/: test_paths.py
tests/session/: test_attach.py  test_list.py
tests/support/: helpers.py  requirements.txt
