[project]
name = "aoa-tests"
version = "0.0.0"
requires-python = ">=3.11"

[dependency-groups]
test = [
    "pexpect>=4.8.0",
    "pytest>=7.0.0",
    "pytest-randomly>=3.12.0",
    "pytest-cov>=4.0.0",
    "pytest-testinfra>=10.0.0",
    "pyte>=0.8.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
norecursedirs = ["tests/support"]
pythonpath = ["tests"]
addopts = "-p no:cacheprovider -p randomly --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ANN"]
